add: documents file

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<p class="mb-0">Sou Técnico em Informática formado pelo Instituto Federal de São Paulo e atualmente estou cursando bacharelado em Engenharia da Computação no Centro Metropolitano das Faculdades Unidas. Também concluí o curso de Desenvolvimento de Sistemas no programa PROPROFISSÃO, oferecido pelo Instituto Proa, e a trilha AWS Re/Start, em parceria com a Escola da Nuvem e AWS. Além de uma sólida base técnica em desenvolvimento de sistemas e computação em nuvem, tenho grande interesse por arte e liderança de projetos, o que me motiva a explorar a criatividade e a gestão em ambientes colaborativos.</p>
 
 						<!-- Altere o link para um PDF do seu Curriculo -->
-						<a class="btn btn-download" href="CV - JOSINEUDOARRUDA.pdf">
+						<a class="btn btn-download" href="assets/documents/CV - JOSINEUDOARRUDA.pdf">
 							Baixar o meu CV
 						</a>
 					</div>
