add: add readme

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 											</div>
 										</li>
 										<li class="mb-2">
-											<div class="resume-skill-name">Pandas</div>
+											<div class="resume-skill-name">Análise de Dados</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
 													style="width: 80%" aria-valuenow="25" aria-valuemin="0"
@@ -447,7 +447,7 @@
 											</div>
 										</li>
 										<li class="mb-2">
-											<div class="resume-skill-name">NumPy</div>
+											<div class="resume-skill-name">Pandas</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
 													style="width: 75%" aria-valuenow="25" aria-valuemin="0"
